--- a/index.html
+++ b/index.html
@@ -1,102 +1,38 @@
 <!DOCTYPE html>
-<html lang="zh-HK">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AENO</title>
-
-<style>
-body{
-  margin:0;
-  overflow:hidden;
-  font-family:Arial;
-}
-
-.screen{
-  position:absolute;
-  width:100%;
-  height:100%;
-}
-
-.hidden{
-  display:none;
-}
-
-#loginScreen{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:column;
-  background:#111;
-  color:white;
-}
-
-#loginScreen input{
-  margin:5px;
-  padding:8px;
-}
-
-#loginScreen button{
-  margin:5px;
-  padding:8px 16px;
-}
-
-#gameCanvas{
-  position:absolute;
-  top:0;
-  left:0;
-}
-
-.panel{
-  position:absolute;
-  top:50px;
-  left:50px;
-  width:260px;
-  background:rgba(0,0,0,0.8);
-  color:white;
-  padding:10px;
-  border-radius:8px;
-  z-index:10;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>AENO Game</title>
+  <style>
+    body { margin:0; overflow:hidden; font-family:Arial; }
+    #loginBox {
+      position:absolute;
+      top:50%; left:50%;
+      transform:translate(-50%,-50%);
+      background:#222;
+      padding:20px;
+      border-radius:10px;
+      color:white;
+    }
+    #gameContainer {
+      display:none;
+    }
+  </style>
 </head>
-
 <body>
 
-<!-- 登入畫面 -->
-<div id="loginScreen" class="screen">
-  <h2>AENO</h2>
-
-  <input id="username" placeholder="帳號">
-  <input id="password" type="password" placeholder="密碼">
-
-  <button id="btnRegister">註冊</button>
-  <button id="btnLogin">登入</button>
-
-  <hr>
-
-  <button id="btnGuest">遊客模式</button>
+<div id="loginBox">
+  <h2>AENO Login</h2>
+  <input id="username" placeholder="Username"><br><br>
+  <button onclick="login()">Enter</button>
 </div>
 
-<!-- 遊戲畫面 -->
-<div id="gameScreen" class="screen hidden">
-  <canvas id="gameCanvas"></canvas>
+<div id="gameContainer"></div>
 
-  <div id="mainPanel" class="panel">
-    <div><b>AENO 面板</b></div>
-    金幣: <span id="uiGold">0</span><br>
-    木材: <span id="uiWood">0</span><br>
-    石頭: <span id="uiStone">0</span><br>
-    鐵: <span id="uiIron">0</span><br>
-    糧食: <span id="uiFood">0</span><br>
-    AENO: <span id="uiAeno">0</span><br>
-  </div>
-</div>
+<script src="https://cdn.jsdelivr.net/npm/three@0.158/build/three.min.js"></script>
 
-<!-- 一定要先載入 three.js -->
-<script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
-
-<!-- 再載入遊戲程式 -->
+<script src="auth.js"></script>
+<script src="loader.js"></script>
 <script src="game.js"></script>
 
 </body>
