--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 <script src="engine.js"></script>
 
 <!-- 遊戲控制 -->
-<script src="game.js"></script>
+<script src="world.js"></script>
+  <script src="game.js"></script>
 
 </body>
 </html>
