--- a/index.html
+++ b/index.html
@@ -4,83 +4,147 @@
 <meta charset="UTF-8">
 <title>AENO V3</title>
 <style>
-body{margin:0;overflow:hidden;background:#000;}
-#gameContainer{width:100vw;height:100vh;}
+body { margin:0; overflow:hidden; }
+canvas { display:block; }
 </style>
 </head>
 <body>
 
-<div id="gameContainer"></div>
-
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
 
 const scene = new THREE.Scene();
-scene.background = new THREE.Color(0xeaeaea);
+scene.fog = new THREE.Fog(0x87CEEB, 20, 120);
 
-const camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 1000);
-camera.position.set(5,4,8);
-camera.lookAt(0,1,0);
+// 漸層天空
+const skyGeo = new THREE.SphereGeometry(500, 32, 32);
+const skyMat = new THREE.MeshBasicMaterial({
+color: 0x87CEEB,
+side: THREE.BackSide
+});
+const sky = new THREE.Mesh(skyGeo, skyMat);
+scene.add(sky);
+
+const camera = new THREE.PerspectiveCamera(65, window.innerWidth/window.innerHeight, 0.1, 1000);
+camera.position.set(20,15,25);
+camera.lookAt(0,0,0);
 
 const renderer = new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(window.innerWidth,window.innerHeight);
 renderer.shadowMap.enabled = true;
-document.getElementById("gameContainer").appendChild(renderer.domElement);
+renderer.shadowMap.type = THREE.PCFSoftShadowMap;
+document.body.appendChild(renderer.domElement);
 
-// light
-const hemi = new THREE.HemisphereLight(0xffffff,0x444444,1);
-scene.add(hemi);
+// 光源
+const ambient = new THREE.AmbientLight(0xffffff,0.4);
+scene.add(ambient);
 
-const dir = new THREE.DirectionalLight(0xffffff,1.2);
-dir.position.set(5,10,7);
-dir.castShadow = true;
-scene.add(dir);
+const sun = new THREE.DirectionalLight(0xffffff,1.2);
+sun.position.set(50,80,50);
+sun.castShadow = true;
+sun.shadow.mapSize.width = 2048;
+sun.shadow.mapSize.height = 2048;
+scene.add(sun);
 
-// ground
-const groundGeo = new THREE.PlaneGeometry(50,50);
-const groundMat = new THREE.MeshStandardMaterial({color:0xdddddd});
+// 地面
+const groundGeo = new THREE.PlaneGeometry(300,300,50,50);
+const groundMat = new THREE.MeshStandardMaterial({color:0x4CAF50});
 const ground = new THREE.Mesh(groundGeo,groundMat);
 ground.rotation.x = -Math.PI/2;
 ground.receiveShadow = true;
 scene.add(ground);
 
-// ===== LOAD REAL MODEL =====
+// 建築物（帶屋頂）
+function createHouse(x,z){
+const baseGeo = new THREE.BoxGeometry(4,4,4);
+const baseMat = new THREE.MeshStandardMaterial({color:0xb0b0b0});
+const base = new THREE.Mesh(baseGeo,baseMat);
+base.position.set(x,2,z);
+base.castShadow = true;
+scene.add(base);
 
-const loader = new THREE.GLTFLoader();
-
-loader.load(
-'https://threejs.org/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf',
-function(gltf){
-
-const model = gltf.scene;
-model.scale.set(2,2,2);
-model.position.set(0,0,0);
-
-model.traverse(function(child){
-if(child.isMesh){
-child.castShadow = true;
-child.receiveShadow = true;
+const roofGeo = new THREE.ConeGeometry(3.2,3,4);
+const roofMat = new THREE.MeshStandardMaterial({color:0x8B0000});
+const roof = new THREE.Mesh(roofGeo,roofMat);
+roof.position.set(x,5,z);
+roof.rotation.y = Math.PI/4;
+roof.castShadow = true;
+scene.add(roof);
 }
-});
 
-scene.add(model);
+createHouse(0,0);
+createHouse(15,10);
+createHouse(-18,-12);
 
-},
-undefined,
-function(error){
-console.error(error);
+// 樹木
+function createTree(x,z){
+const trunkGeo = new THREE.CylinderGeometry(0.5,0.5,4);
+const trunkMat = new THREE.MeshStandardMaterial({color:0x8B4513});
+const trunk = new THREE.Mesh(trunkGeo,trunkMat);
+trunk.position.set(x,2,z);
+trunk.castShadow = true;
+scene.add(trunk);
+
+const leafGeo = new THREE.SphereGeometry(2.5,32,32);
+const leafMat = new THREE.MeshStandardMaterial({color:0x228B22});
+const leaf = new THREE.Mesh(leafGeo,leafMat);
+leaf.position.set(x,5,z);
+leaf.castShadow = true;
+scene.add(leaf);
 }
+
+for(let i=0;i<20;i++){
+createTree(
+(Math.random()-0.5)*200,
+(Math.random()-0.5)*200
 );
+}
 
-// render loop
+// 動物（立體感）
+function createAnimal(x,z){
+const group = new THREE.Group();
+
+const body = new THREE.Mesh(
+new THREE.BoxGeometry(3,2,1.5),
+new THREE.MeshStandardMaterial({color:0xffaa00})
+);
+body.castShadow = true;
+
+const head = new THREE.Mesh(
+new THREE.BoxGeometry(1.5,1.5,1.5),
+new THREE.MeshStandardMaterial({color:0xffaa00})
+);
+head.position.set(2,0.5,0);
+head.castShadow = true;
+
+group.add(body);
+group.add(head);
+group.position.set(x,1,z);
+
+scene.add(group);
+return group;
+}
+
+const animals = [];
+animals.push(createAnimal(10,-8));
+animals.push(createAnimal(-12,6));
+
+// 動畫
 function animate(){
 requestAnimationFrame(animate);
+
+// 動物慢慢移動
+animals.forEach(a=>{
+a.position.x += Math.sin(Date.now()*0.001)*0.02;
+});
+
 renderer.render(scene,camera);
 }
+
 animate();
 
+// Resize
 window.addEventListener("resize",()=>{
 camera.aspect = window.innerWidth/window.innerHeight;
 camera.updateProjectionMatrix();
